# GraphCutAlgorithm

./: CMakeLists.txt  README.md  graphCuts.cpp
